--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.0.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-toolbox": "^2.0.0-beta.12",
     "sqlite3": "^3.1.9"
   },
   "devDependencies": {
